--- a/.github/workflows/terraform-ci.yaml
+++ b/.github/workflows/terraform-ci.yaml
@@ -2,7 +2,9 @@ name: Terraform CI
  
 on: 
   pull_request: 
-    branches: [ "main" ] 
+    branches: [ "main" ]
+  push:
+    branches: [ "main" ]
  
 jobs: 
   CI: 
